Add hiring_process
