# internal/entity/feedback.go
@@ -8,17 +8,17 @@ import (
 )
 
 type Feedback struct {
-	ID            uuid.UUID `gorm:"type:uuid;primaryKey" json:"id"`
-	InterviewerID uuid.UUID `gorm:"type:uuid" json:"interviewer_id"`
-	Interviewer   User      `gorm:"foreignKey:InterviewerID" json:"-"`
-	CandidateID   uuid.UUID `gorm:"type:uuid" json:"candidate_id"`
-	Candidate     Candidate `gorm:"foreignKey:CandidateID" json:"-"`
-	StageID       uint      `gorm:"not null"`
-	Stage         Stage     `gorm:"foreignKey:StageID" json:"-"`
-	Comments      string    `gorm:"type:text" json:"comments"`
-	Score         int       `json:"score"`
-	CreatedAt     time.Time `json:"created_at"`
-	UpdatedAt     time.Time `json:"updated_at"`
+	ID              uuid.UUID     `gorm:"type:uuid;primaryKey" json:"id"`
+	InterviewerID   uuid.UUID     `gorm:"type:uuid" json:"interviewer_id"`
+	Interviewer     User          `gorm:"foreignKey:InterviewerID" json:"-"`
+	HiringProcessID uint          `json:"hiring_process_id"`
+	HiringProcess   HiringProcess `gorm:"foreignKey:HiringProcessID" json:"-"`
+	StageID         uint          `gorm:"not null"`
+	Stage           Stage         `gorm:"foreignKey:StageID" json:"-"`
+	Comments        string        `gorm:"type:text" json:"comments"`
+	Score           int           `json:"score"`
+	CreatedAt       time.Time     `json:"created_at"`
+	UpdatedAt       time.Time     `json:"updated_at"`
 }
 
 func (f *Feedback) BeforeCreate(tx *gorm.DB) (err error) {
@@ -28,17 +28,16 @@ func (f *Feedback) BeforeCreate(tx *gorm.DB) (err error) {
 	return nil
 }
 
-func NewFeedback(interviewerID, candidateID string, stageID uint, comments string, score int) *Feedback {
+func NewFeedback(interviewerID string, stageID, hiringProcessID uint, comments string, score int) *Feedback {
 	interviewerUUID := uuid.MustParse(interviewerID)
-	candidateUUID := uuid.MustParse(candidateID)
 
 	return &Feedback{
-		InterviewerID: interviewerUUID,
-		CandidateID:   candidateUUID,
-		StageID:       stageID,
-		Comments:      comments,
-		Score:         score,
-		CreatedAt:     time.Now(),
-		UpdatedAt:     time.Now(),
+		InterviewerID:   interviewerUUID,
+		HiringProcessID: hiringProcessID,
+		StageID:         stageID,
+		Comments:        comments,
+		Score:           score,
+		CreatedAt:       time.Now(),
+		UpdatedAt:       time.Now(),
 	}
 }
